# learn-opengl

./: .clang-format  CMakeLists.txt  CPPLINT.cfg
assets/images/: container.jpg:Zone.Identifier
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
include/: camera.h  mesh.h  shader.h  transform.h
shaders/: fragment.glsl  vertex.glsl
src/: lib.cpp  main.cpp  shader.cpp
